.metadata/.plugins/org.eclipse.cdt.ui/assasasa.build.log
13:09:59 **** Incremental Build of configuration Debug for project assasasa ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\assasasa.o" "..\\src\\assasasa.c" 
..\src\assasasa.c: In function 'main':
..\src\assasasa.c:20:11: warning: missing terminating " character
    printf("Grade=A);
           ^
..\src\assasasa.c:20:11: error: missing terminating " character
    printf("Grade=A);
           ^~~~~~~~~~
..\src\assasasa.c:21:3: error: expected expression before '}' token
   }else if(marks<80){
   ^
..\src\assasasa.c:20:11: error: expected ';' before '}' token
    printf("Grade=A);
           ^
           ;
   }else if(marks<80){
   ~        
..\src\assasasa.c:22:11: warning: missing terminating " character
    printf("Grade=B );
           ^
..\src\assasasa.c:22:11: error: missing terminating " character
    printf("Grade=B );
           ^~~~~~~~~~~
..\src\assasasa.c:23:3: error: expected expression before '}' token
   }else if(mark<70){
   ^
..\src\assasasa.c:22:11: error: expected ';' before '}' token
    printf("Grade=B );
           ^
           ;
   }else if(mark<70){
   ~        
..\src\assasasa.c:23:12: error: 'mark' undeclared (first use in this function); did you mean 'marks'?
   }else if(mark<70){
            ^~~~
            marks
..\src\assasasa.c:23:12: note: each undeclared identifier is reported only once for each function it appears in
..\src\assasasa.c:24:11: warning: missing terminating " character
    printf("Grade=C );
           ^
..\src\assasasa.c:24:11: error: missing terminating " character
    printf("Grade=C );
           ^~~~~~~~~~~
..\src\assasasa.c:25:3: error: expected expression before '}' token
   }else if(mark<60){
   ^
..\src\assasasa.c:24:11: error: expected ';' before '}' token
    printf("Grade=C );
           ^
           ;
   }else if(mark<60){
   ~        
..\src\assasasa.c:26:11: warning: missing terminating " character
    printf("Grade=D);
           ^
..\src\assasasa.c:26:11: error: missing terminating " character
    printf("Grade=D);
           ^~~~~~~~~~
..\src\assasasa.c:27:3: error: expected expression before '}' token
   }else if(mark<50){
   ^
..\src\assasasa.c:26:11: error: expected ';' before '}' token
    printf("Grade=D);
           ^
           ;
   }else if(mark<50){
   ~        
..\src\assasasa.c:32: note: -Wmisleading-indentation is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
 }
 
..\src\assasasa.c:32:1: error: expected declaration or statement at end of input
 }
 ^

13:10:00 Build Failed. 14 errors, 4 warnings. (took 329ms)

